padding-fix for jumbotron on mobile layout

--- a/css/main.css
+++ b/css/main.css
@@ -330,3 +330,6 @@ progress {
     width:100%;
     height:20px;
 }
+.jumbotron {
+    padding: 15px;
+}
